# workspaces

./: .gitignore  LICENSE  README.md  com.github.devalien.workspaces.json  meson.build
data/: Application.css  com.github.devalien.workspaces.appdata.xml.in  com.github.devalien.workspaces.desktop.in  com.github.devalien.workspaces.gschema.xml  css.gresource.xml  meson.build
debian/: changelog  control  copyright
po/: LINGUAS  POTFILES  com.github.devalien.workspaces.pot  cz.po  de.po  es.po  fr.po  it.po  nl.po  tr.po
po/extra/: POTFILES  extra.pot  fr.po
src/: Application.vala  Main.vala  PreferencesWindow.vala  QuickLaunchWindow.vala  Window.vala  meson.build
src/Controllers/: WorkspacesController.vala
src/Dialogs/: About.vala  AddCategory.vala  AddItem.vala  AddWorkspace.vala  AppChooser.vala  Dialog.vala  Preferences.vala
src/Models/: AppInfo.vala  Category.vala  Item.vala  ItemType.vala  SearchItem.vala  Workspace.vala  WorkspacesStore.vala
src/Popovers/: AppChooserPopover.vala  IconChooserPopover.vala
src/Settings/: CustomShortcutSettings.vala  Shortcut.vala
src/Views/: AlertView.vala  ItemEditor.vala  WorkspaceEditor.vala  WorkspaceView.vala
src/Widgets/: AppListBox.vala  Dot.vala  Entry.vala  ExpandableCategory.vala  IconButton.vala  IconChooserDialog.vala  IconListBox.vala  ItemRow.vala  QuickWelcome.vala  SearchListBox.vala  SearchListBoxItem.vala  SettingBox.vala  ShortcutEntry.vala  TypeComboBox.vala  Welcome.vala  WorkspaceItem.vala  WorkspaceRow.vala
