# Listing files to compile
sources = files (
    
    'Application.vala',
    'PreferencesWindow.vala',
    'Widgets/Welcome.vala',
    'Widgets/IconButton.vala',
    'Widgets/IconChooserDialog.vala',
    'Widgets/IconListBox.vala',
    'Widgets/ExpandableCategory.vala',
    'Widgets/Entry.vala',
    'Widgets/WorkspaceItem.vala',
    'Widgets/SettingBox.vala',
    'Widgets/SearchListBox.vala',
    'Widgets/SearchListBoxItem.vala',
    'Widgets/Dot.vala',
    'Widgets/QuickWelcome.vala',
    'Widgets/ShortcutEntry.vala',
    'Models/Category.vala',
    'Models/Item.vala',
    'Models/SearchItem.vala',
    'Models/Workspace.vala',
    'Models/WorkspacesStore.vala',
    'Views/ItemEditor.vala',
    'Views/AlertView.vala',
    'Dialogs/Dialog.vala',
    'Dialogs/AddWorkspace.vala',
    'Dialogs/AddItem.vala',
    'Dialogs/About.vala',
    'Dialogs/Preferences.vala',
    'Controllers/WorkspacesController.vala',
    'Settings/CustomShortcutSettings.vala',
    'Settings/Shortcut.vala',
    'Main.vala',
    'QuickLaunchWindow.vala',
)
