# Listing files to compile
sources = files (
    'Controllers/WorkspacesController.vala',

    'Dialogs/About.vala',
    'Dialogs/AddItem.vala',
    'Dialogs/AddWorkspace.vala',
    'Dialogs/AppChooser.vala',
    'Dialogs/Dialog.vala',
    'Dialogs/Preferences.vala',

    'Models/AppInfo.vala',
    'Models/Category.vala',
    'Models/Item.vala',
    'Models/ItemType.vala',
    'Models/SearchItem.vala',
    'Models/Workspace.vala',
    'Models/WorkspacesStore.vala',

    'Settings/CustomShortcutSettings.vala',
    'Settings/Shortcut.vala',

    'Views/AlertView.vala',
    'Views/ItemEditor.vala',

    'Widgets/AppListBox.vala',
    'Widgets/Dot.vala',
    'Widgets/Entry.vala',
    'Widgets/ExpandableCategory.vala',
    'Widgets/IconButton.vala',
    'Widgets/IconChooserDialog.vala',
    'Widgets/IconListBox.vala',
    'Widgets/QuickWelcome.vala',
    'Widgets/SearchListBox.vala',
    'Widgets/SearchListBoxItem.vala',
    'Widgets/SettingBox.vala',
    'Widgets/ShortcutEntry.vala',
    'Widgets/TypeComboBox.vala',
    'Widgets/Welcome.vala',
    'Widgets/WorkspaceItem.vala',

    'Application.vala',
    'PreferencesWindow.vala',
    'Main.vala',
    'QuickLaunchWindow.vala',
)
