# Listing files to compile
sources = files (
    'Controllers/WorkspacesController.vala',

    'Dialogs/About.vala',
    'Dialogs/AddItem.vala',
    'Dialogs/AddWorkspace.vala',
    'Dialogs/Dialog.vala',
    'Dialogs/Preferences.vala',

    'Models/AppInfo.vala',
    'Models/Item.vala',
    'Models/ItemType.vala',
    'Models/SearchItem.vala',
    'Models/Workspace.vala',
    'Models/WorkspacesStore.vala',

    'Popovers/IconChooserPopover.vala',
    'Popovers/AppChooserPopover.vala',

    'Settings/CustomShortcutSettings.vala',
    'Settings/Shortcut.vala',

    'Views/AlertView.vala',
    'Views/ItemEditor.vala',
    'Views/WorkspaceEditor.vala',

    'Widgets/AppListBox.vala',
    'Widgets/Dot.vala',
    'Widgets/Entry.vala',
    'Widgets/ExpandableCategory.vala',
    'Widgets/IconButton.vala',
    'Widgets/IconListBox.vala',
    'Widgets/ItemRow.vala',
    'Widgets/QuickWelcome.vala',
    'Widgets/SearchListBox.vala',
    'Widgets/SearchListBoxItem.vala',
    'Widgets/SettingBox.vala',
    'Widgets/ShortcutEntry.vala',
    'Widgets/TypeComboBox.vala',
    'Widgets/Welcome.vala',
    'Widgets/WorkspaceItem.vala',
    'Widgets/WorkspaceRow.vala',

    'Application.vala',
    'PreferencesWindow.vala',
    'Main.vala',
    'QuickLaunchWindow.vala',
)
